# nice-lights

./: CMakeLists.txt  Makefile  README.md
e131/: e131.c  e131.h
src/: controlpacket.hpp  edge-map-local.txt  edge-map.txt  glhelpers.cpp  glhelpers.hpp  icosahedron.cpp  icosahedron.hpp  main.cpp  network.cpp  network.hpp  serial.cpp  serial.hpp  vertexdesc.cpp  vertexdesc.hpp
